# fractal-renderer

./: .gitmodules  CMakeLists.txt  gradient.hpp  main.cpp  timer.hpp  unix_build.sh  unix_run.sh  win_build.cmd  win_run.cmd
